--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>ico.png">
+    <link rel="icon" href="<%= BASE_URL %>logo-mini.png">
     <title>活动管理系统</title>
   </head>
   <body>
